app/2048/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "game-2048"
  labels:
    app: "2048"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "2048"
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - name: "2048"
        image: public.ecr.aws/seb-demo/docker-2048:latest
        ports:
        - containerPort: 80
