app/2048/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "game-2048"
spec:
  selector:
    app: "2048"
  ports:
  - port: 80
